# testcraft-api-rust

./: Cargo.toml  README.md  example.env
src/: app_config.rs  lib.rs  main.rs  route_config.rs
src/handlers/: base_handler.rs  mod.rs
src/models/requests/: accessibility_request.rs  automate_tests_request.rs  generate_ideas_request.rs  mod.rs
src/models/responses/: chat.rs
src/utils/: html.rs  mod.rs  openai.rs
