[package]
name = "testcraft-api-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_variant = "0.1.2"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
futures = "0.3.28"
async-stream = "0.3.5"
regex = "1.10.0"

[profile.release]
opt-level = 3